# repulsive-curves

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  batch_convert.py  convert_to_edges.py  frames_to_mp4.sh  mp4_better.sh  overlay_transparent.sh  self-avoiding.code-workspace
include/: boundary_derivatives.h  boundary_element.h  boundary_loop.h  circle_search.h  curve_io.h  extra_potentials.h  implicit_surface.h  lws_app.h  lws_cluster.h  lws_energy.h  lws_flow.h  lws_options.h  mesh_helpers.h  multigrid_domain.h  multigrid_hierarchy.h  multigrid_operator.h  poly_curve.h  poly_curve_hierarchy.h  poly_curve_network.h  scene_file.h  sobo_slobo.h  tpe_energy_sc.h  tpe_flow_sc.h  utils.h  vert_jacobian.h  vertexderivatives.h
include/applications/: pathplanning.h
include/export/: mvproduct.h
include/flow/: constraint_functions.h  gradient_constraint_enum.h  gradient_constraint_types.h  gradient_constraints.h
include/iterative/: bicgstab.h  cg.h
include/marchingcubes/: CIsoSurface.h  Vectors.h
include/multigrid/: constraint_projector_domain.h  constraint_projector_operator.h  domain_constraints.h  matrix_free.h  multigrid_domain.h  multigrid_hierarchy.h  multigrid_operator.h  nullspace_projector.h  vector_multiplier.h
include/obstacles/: mesh_obstacle.h  obstacle.h  plane_obstacle.h  sphere_obstacle.h
include/preconditioned/: hs_mat_replacement.h  iterative_solve.h  sparse_preconditioner.h
include/product/: block_cluster_tree.h  dense_matrix.h  matrix_free.h  test_matrices.h  vector_multiplier.h
include/spacecurves/: space_curve.h  space_curve_vector_quantity.h
include/spatial/: block_cluster_tree.h  spatial_tree.h  tpe_bvh.h  tpe_kdtree.h  tpe_octree.h  vertex_body.h
knots/: loopy2x.txt  towardscenter2x.txt
scenes/: FORMATS.md
scenes/BluenoiseCurves/: scene.txt
scenes/BunnyCurvePacking/: scene.txt
scenes/CableUntangle/: scene.txt
scenes/CapillaryNetwork/: scene.txt
scenes/CurveInterpolation/: scene.txt
scenes/DoubleTorus/: scene.txt
scenes/FlowVisualization/: scene.txt
scenes/FreedmanUnknot/: scene.txt
scenes/GraphDrawing/: k33scene.txt  k5scene.txt
scenes/ImplicitDoubleTorus/: scene1.txt  scene2.txt
scenes/ImplicitSphere/: scene.txt
scenes/ImplicitTorus/: multi-scene.txt  scene.txt
scenes/PartialSurfaceConstraint/: scene.txt
scenes/PathPlanning/: scene.txt
scenes/PlanarGraphDrawing/: scene.txt
scenes/RingsPacking/: scene.txt  scene2.txt
scenes/Simple/: scene.txt
scenes/SimpleCurvePacking/: circle-scene.txt  rect-scene.txt
scenes/TangentInterpolation/: scene.txt
src/: boundary_derivatives.cpp  boundary_element.cpp  boundary_loop.cpp  circle_search.cpp  curve_io.cpp  extra_potentials.cpp  implicit_surface.cpp  lws_app.cpp  lws_cluster.cpp  lws_energy.cpp  lws_flow.cpp  lws_options.cpp  main.cpp  mesh_helpers.cpp  multigrid_hierarchy.cpp  multigrid_operator.cpp  poly_curve.cpp  poly_curve_hierarchy.cpp  poly_curve_network.cpp  scene_file.cpp  sobo_slobo.cpp  tpe_energy_sc.cpp  tpe_flow_sc.cpp  utils.cpp  vert_jacobian.cpp  vertexderivatives.cpp
src/applications/: pathplanning.cpp
src/export/: mvproduct.cpp
src/flow/: constraint_functions.cpp  gradient_constraint_enum.cpp  gradient_constraint_types.cpp
src/iterative/: bicgstab.cpp  cg.cpp
src/marchingcubes/: CIsoSurface.cpp  Vectors.cpp
src/multigrid/: multigrid_operator.cpp
src/obstacles/: mesh_obstacle.cpp  obstacle.cpp  plane_obstacle.cpp  sphere_obstacle.cpp
(+13 files in other folders)
